# basemode

./: .env.example  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: integration-provider-health.yml  verified-models.yml
data/: verified_models_details.json  verified_models_registry.json
docs/: index.md
docs/concepts/: How It Works.md  Model Normalization.md  Strategies.md
docs/getting-started/: Installation.md  Quickstart.md
docs/reference/: GenerationParams.md  branch_text.md  continue_text.md  detect_strategy.md
docs/usage/: CLI Reference.md  Keys and Defaults.md  Python API.md  Verified Models.md
scripts/: generate_verified_models_table.py
src/basemode/: __init__.py  cli.py  continue_.py  detect.py  display.py  healing.py  keys.py  loom_formats.py  models.py  naming.py  params.py  session.py  settings.py  stats.py  store.py  usage.py
src/basemode/strategies/: __init__.py  base.py  compat.py  completion.py  few_shot.py  fim.py  prefill.py  system.py  utils.py
src/basemode/tui/: app.py  app.tcss
src/basemode/tui/screens/: int_input.py  loom.py  model_picker.py  tree_picker.py
src/basemode/tui/widgets/: loom_view.py  stream_view.py  tree_picker.py
tests/: conftest.py  test_cli.py  test_compat.py  test_detect.py  test_display.py  test_integration.py  test_loom_formats.py  test_models.py  test_naming.py  test_session.py  test_stats.py  test_store.py  test_strategies.py  test_tree_picker.py  test_tui.py  test_usage.py  test_utils.py
