[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basemode"
version = "0.1.0"
description = "Make any LLM do raw text continuation"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.63.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
basemode = "basemode.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basemode"]

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["basemode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/basemode --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/basemode"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
